--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node build/server.js" ,
-    "dev": "tsc && concurrently \"tsc -w\" \"node --watch build/server.js\""
+    "dev": "tsc && concurrently \"tsc -w\" \"node --watch build/server.js\"",
+    "prod": "SET NODE_ENV=production && npm start"
   },
   "keywords": [],
   "author": "",
