--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
+  },  
+  "imports": {
+    "#src/*": "./src/*"
   }
 }
