--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node build/server.js" ,
-    "dev": "tsc && concurrently \"tsc -w\" \"node --watch build/server.js\"",
+    "start": "tsc && node build/server.js",
+    "dev": "tsc && concurrently \"tsc -w\" \"nodemon build/server.js\"",
     "prod": "SET NODE_ENV=production && npm start"
   },
   "keywords": [],
@@ -18,7 +18,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0"
@@ -28,9 +27,10 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "concurrently": "^8.2.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
-  },  
+  },
   "imports": {
     "#src/*": "./src/*"
   }
