--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node build/server.js",
     "dev": "tsc && concurrently \"tsc -w\" \"nodemon build/server.js\"",
-    "prod": "SET NODE_ENV=production && npm start"
+    "prod": "SET NODE_ENV=production && npm start",
+    "typeorm": "typeorm-ts-node-esm -d ./src/config/database.ts",
+    "to-m:generate": "pnpm typeorm migration:generate",
+    "to-m:run": "pnpm typeorm migration:run",
+    "to-m:revert": "pnpm typeorm migration:revert"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +23,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
+    "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0"
   },
@@ -29,6 +34,7 @@
     "concurrently": "^8.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "imports": {
